--- a/persistentidgenerator/pyproject.toml
+++ b/persistentidgenerator/pyproject.toml
@@ -8,7 +8,7 @@ readme = "README.md"
 
 [tool.poetry.dependencies]
 python = "^3.11"
-seqguidgen = { path = "seqguidgen" }
+# seqguidgen = { path = "seqguidgen" }
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^8.3.3"
