--- a/persistentidgenerator/pyproject.toml
+++ b/persistentidgenerator/pyproject.toml
@@ -1,10 +1,13 @@
 [tool.poetry]
 name = "persistentidgenerator"
-version = "1.0.0"
+version = "1.1.1"
 description = "This packages allows creating squential ids for financial entities. It's a fairly simple program that allocates 1 billion ids for each entity."
-authors = ["Deb Mishra <deb.mishra@daedal.codes>"]
+authors = ["Deb Mishra <email@debmishra.me>"]
 license = "GNU General Public License v3.0"
 readme = "README.md"
+homepage = "https://github.com/debmishra-daedal/stormwind/persistentidgenerator"
+repository = "https://github.com/debmishra-daedal/stormwind"
+keywords = ["guid", "uniqueid", "uuid", "sequentialid"]
 
 [tool.poetry.dependencies]
 python = "^3.11"
